--- a/aplikacja/template.html
+++ b/aplikacja/template.html
@@ -9,31 +9,9 @@
 	
 	<body>
 <div id="top">
-	<div id="NAGLOWEK"><img src="images/logo.png" class=srodek></div>
-	<div id="MENU">
-		  <ul>
-			  <li><a href="">Realizuj zamówienie</a></li>
-			  <li><a href="">Zmień stan zamówienia</a></li>
-			  <li><a href="">Zamów towar do magazynu</a></li>
-			  <li><a href="">Sprawdź Stan Magazynu</a></li>
-			  <li><a href="">Generuj fakturę</a></li>
-		</ul></div>
-			<div id="MENU">
-		  <ul>
-			  <li><a href="">Wyślij fakturę na email</a></li>
-			  <li><a href="">Generuj zestawienie</a></li>
-			  <li><a href="">Złóż zamówienie</a></li>
-			  <li><a href="">Podgląd zamówień</a></li>
-			  <li><a href="">Edytuj zamówienie</a></li>
-		</ul></div>
-			<div id="MENU">
-		  <ul>
-			  <li><a href="">Pobierz fakturę</a></li>
-			  <li><a href="wyswietl_produkty.php">Podgląd dostępnych produktów</a></li>
-			  <li><a href="">Wyszukaj produkt</a></li>
-			  <li><a href="">Sprawdź stan realizacji zamówienia</a></li>
-			  <li><a href="">Edytuj dane osobowe</a></li>
-		</ul></div>
+	<?php
+include('menu.php');
+?></div>
 <div id="TRESC">
 Coś
 <!-- DIV Z TESCIA -->
